--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
     "@types/node": "^20.4.2",
     "prisma": "^5.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.5.4"
   }
 }
