--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "bin": {
     "backtestjs": "dist/main.js"
   },
+  "prisma": {
+    "schema": "./node_modules/@backtestjs/core/prisma/schema.prisma"
+  },
   "files": [
     "dist",
     "prisma/schema.prisma"
@@ -37,12 +40,8 @@
   "author": "Andrew Baronick",
   "license": "Apache-2.0",
   "dependencies": {
-    "@prisma/client": "^5.0.0",
-    "axios": "^1.4.0",
     "chalk": "^4.1.0",
     "cli-progress": "^3.12.0",
-    "csvtojson": "^2.0.10",
-    "dayjs": "^1.11.13",
     "express": "^4.18.2",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.2.5",
@@ -57,7 +56,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
     "@types/node": "^20.4.2",
-    "prisma": "^5.0.0",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.5.4"
   }
