--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "multi symbol"
   ],
   "scripts": {
+    "align-db": "npx prisma validate && npx prisma generate && npx prisma db push",
     "start": "node -r ts-node/register --env-file=.env src/main.ts",
-    "dev": "node -r ts-node/register --env-file=.env src/main.ts",
+    "dev": "npm run start",
     "build": "tsc",
     "prejs": "npm run build",
-    "js": "node dist/main.js",
+    "js": "cd dist && node main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build",
     "postinstall": "npm run build"
