--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   ],
   "scripts": {
     "align-db": "npx prisma validate && npx prisma generate && npx prisma db push",
-    "start": "node -r ts-node/register --env-file=.env src/main.ts",
-    "dev": "npm run start",
     "build": "tsc",
     "prejs": "npm run build",
-    "js": "cd dist && node main.js",
+    "start": "cd dist && node main.js",
+    "dev": "node -r ts-node/register --env-file=.env src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build",
     "postinstall": "npm run build"
